--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "eslint": "^7.14.0",
+    "ethereumjs-tx": "^2.1.2",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.2",
     "prompt-sync": "^4.2.0",
