--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.14.0",
     "ethereumjs-tx": "^2.1.2",
+    "fs": "0.0.1-security",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.2",
     "prompt-sync": "^4.2.0",
