--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.2",
     "prompt-sync": "^4.2.0",
+    "prompts": "^2.4.0",
     "web3": "^1.3.0"
   }
 }
